<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/inserir_convidado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inserir_cnvd"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/convidado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/nome_pessoa"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/telefone_convidado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="3dp"
        android:hint="@string/telefone_pessoa"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email_convidado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="3dp"
        android:hint="@string/email_pessoa"
        android:inputType="textEmailAddress" />


</LinearLayout>