<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lddm.computacao.pucminas.agenda.SecondActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/AdcionarConvidado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_input_add" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/convidadosTV"
                android:text="@string/convidados"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginStart="7dp"/>
        </LinearLayout>


        <com.baoyz.swipemenulistview.SwipeMenuListView
            android:id="@+id/lista_Convidados"
            android:layout_width="match_parent"
            android:layout_height="350dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/voltar_BTN"
                android:layout_marginStart="16dp"
                android:text="@string/voltar_tela"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/concluir_BTN"
                android:layout_marginStart="16dp"
                android:text="@string/concluir_Evento"/>


        </LinearLayout>



    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
